26 October 2016: Wouter
	- Fix unit tests for openssl 1.1, with no DSA, by faking DSA, enabled
	  with the undocumented switch 'fake-dsa'.  It logs a warning.

25 October 2016: Wouter
	- Fix #1134: unbound-control set_option -- val-override-date: -1 works
	  immediately to ignore datetime, or back to 0 to enable it again.
	  The -- is to ignore the '-1' as an option flag.

24 October 2016: Wouter
	- serve-expired config option: serve expired responses with TTL 0.
	- g.root-servers.net has AAAA address.

21 October 2016: Wouter
	- Ported tests for local_cname unit test to testbound framework.

20 October 2016: Wouter
	- suppress compile warning in lex files.
	- init lzt variable, for older gcc compiler warnings.
	- fix --enable-dsa to work, instead of copying ecdsa enable.
	- Fix DNSSEC validation of query type ANY with DNAME answers.
	- Fixup query_info local_alias init.

19 October 2016: Wouter
	- Fix #1130: whitespace in example.conf.in more consistent.

18 October 2016: Wouter
	- Patch that resolves CNAMEs entered in local-data conf statements that
	  point to data on the internet, from Jinmei Tatuya (Infoblox).
	- Removed patch comments from acllist.c and msgencode.c
	- Added documentation doc/CNAME-basedRedirectionDesignNotes.pdf,
	  from Jinmei Tatuya (Infoblox).
	- Fix #1125: unbound could reuse an answer packet incorrectly for
	  clients with different EDNS parameters, from Jinmei Tatuya.
	- Fix #1118: libunbound.pc sets strange Libs, Libs.private values.
	- Added Requires line to libunbound.pc
	- Please doxygen by modifying mesh.h

17 October 2016: Wouter
	- Re-fix #839 from view commit overwrite.
	- Fixup const void cast warning.

12 October 2016: Ralph
	- Free view config elements.

11 October 2016: Ralph
	- Added qname-minimisation-strict config option.
	- iana portlist update.
	- fix memoryleak logfile when in debug mode.

5 October 2016: Ralph
	- Added views functionality.
	- Fix #1117: spelling errors, from Robert Edmonds.

30 September 2016: Wouter